Метод редактирования задачи изменен с PATCH на PUT, изменена логика валидации
